Applying Stub generation for services